# micrompn

./: README.md  README.rst  pyproject.toml
.github/workflows/: gchr-deploy.yml  python-publish.yml
docker/: Dockerfile
micrompn/: __init__.py  _version.py  main.py  mpn.py
tests/: test_mpn.py
